DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Log__c/TIMBASURVEYS__Log__c.object-meta.xml
<CustomObject>
    <description>Timba Surveys Exceptions Log</description>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>