DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Log__c/fields/TIMBASURVEYS__className__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__className__c</fullName>
    <description>Class that causes the exception</description>
    <label>Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>