DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Log__c/fields/TIMBASURVEYS__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>