DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Log__c/fields/TIMBASURVEYS__Message__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>