DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Log__c/fields/TIMBASURVEYS__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Method_Name__c</fullName>
    <label>Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>